@@ -35,11 +35,11 @@
 #' # interpretable hazard ratio graph.
 #' M2 <- coxph(Surv(acttime, censor) ~ prevgenx*lethal, data = CarpenterFdaData)
 #'
-#' # Simulate Relative Hazard of lethal for multiple values of prevgenx
+#' # Simulate Hazard Ratio of lethal for multiple values of prevgenx
 #' Sim2 <- coxsimInteract(M2, b1 = "prevgenx", b2 = "lethal", 
 #'                     X1 = seq(2, 115, by = 2),
 #'                     X2 = c(0, 1),
-#'                     qi = "Relative Hazard", ci = 0.9)
+#'                     qi = "Hazard Ratio", ci = 0.9)
 #'                     
 #' # Simulate First Difference
 #' Sim3 <- coxsimInteract(M2, b1 = "prevgenx", b2 = "lethal", 
@@ -56,7 +56,7 @@
 #' Note: A dotted line is created at y = 1 (0 for first difference), i.e. no effect, for time-varying hazard ratio graphs. No line is created for hazard rates.
 #'
 #'
-#' Note: if \code{qi = "Relative Hazard"} or \code{qi = "First Difference"} then you need to have choosen more than one fitted value for \code{X1} in \code{\link{coxsimInteract}}. 
+#' Note: if \code{qi = "Hazard Ratio"} or \code{qi = "First Difference"} then you need to have choosen more than one fitted value for \code{X1} in \code{\link{coxsimInteract}}. 
 #'
 #' @import ggplot2
 #' @method simGG siminteract
@@ -100,7 +100,7 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
   		if (!is.null(to)){
   			objdf <- subset(objdf, Time <= to)
   		}
-	} else if (qi == "Relative Hazard"){
+	} else if (qi == "Hazard Ratio"){
 		colour <- NULL
 	  	objdf <- data.frame(obj$X1, obj$X2, obj$HR, obj$Comparison)
 	  	names(objdf) <- c("X1", "X2", "HR", "Comparison")
@@ -162,7 +162,7 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 		        theme_bw(base_size = 15)
 	    }
 	} 
-	else if (qi == "Relative Hazard"){
+	else if (qi == "Hazard Ratio"){
 		X1Unique <- objdf[!duplicated(objdf[, "X1"]), ]
 		if (nrow(X1Unique) <= 1){
 			message("X1 must have more than one fitted value.")
